tests/snapshots/filter__mime_filter.snap
---
source: tests/filter.rs
expression: output
---
[
  {
    "id": 1,
    "gid":<GID>,
    "method": "POST",
    "uri": "http://localhost:<PORT>/echo",
    "status": 200,
    "size": 2,
    "time":<TIME>,
    "mime": "application/json",
    "pending": false
  }
]
