tests/snapshots/filter__title_filter.snap
---
source: tests/filter.rs
expression: output
---
[
  {
    "id": 1,
    "gid":<GID>,
    "method": "GET",
    "uri": "http://localhost:<PORT>/hello",
    "status": 200,
    "size": 13,
    "time":<TIME>,
    "mime": "",
    "pending": false
  }
]
